--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3"
+version: "3.5"
 
 services:
-  mongo:
+  zoox_db:
     image: mongo
     container_name: mongo-zoox    
     ports:
@@ -9,22 +9,15 @@ services:
     expose:
       - 27017      
     restart: always
-    networks:
-      - redelocal
-    stdin_open: true
-    tty: true
 
   backend:
     image: back-zoox
     container_name: back-zoox
     build: ./backend    
+    depends_on:
+      - zoox_db
     ports:
       - 3535:3535
-    networks:
-      - redelocal              
-    stdin_open: true
-    tty: true
-    
 
   frontend:
     image: front-zoox
@@ -32,12 +25,8 @@ services:
     build: ./frontend    
     ports:
       - 8080:8080            
-    stdin_open: true
-    tty: true
+    
 
-networks:
-  redelocal:
-    driver: 'bridge'
     
 
  
